kubernetes-manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-backend
  namespace: travel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel-backend
  template:
    metadata:
      labels:
        app: travel-backend
    spec:
      containers:
        - name: travel-backend
          image: marijaklisarovska/travel-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: travel-backend-config
            items:
              - key: application.properties
                path: application.properties
