kubernetes-manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: travel-app
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo
