kubernetes-manifests/travel-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-backend
  namespace: travel-app
spec:
  selector:
    app: travel-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
