kubernetes-manifests/travel-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-frontend
  namespace: travel-app
spec:
  selector:
    app: travel-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
